# full-self-crawl-agent

./: .env.example  .gitignore  API_GATEWAY_INTEGRATION_COMPLETE.md  CONTAINERIZATION_README.md  Dockerfile  Dockerfile.agent  Dockerfile.dev  Dockerfile.local  Dockerfile.sandbox  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  README_PROJECT_STATUS.md  RELEASE_NOTES.md  TEST_CASES.md  build.sh  docker-compose.yml  e2e_result_debug.json  pyproject.toml  pytest.ini  real_site_test_runner.py  requirements.txt  run_task.py  test_api_gateway.py  test_api_gateway_simple.py  test_containerization.py  test_llm_connection.py  test_llm_connection_fixed.py  test_monitoring_system.py  validate_containerization.py
.claude/: settings.local.json
config/: policies.json  settings.json
docs/: FEATUREDETECTOR_V2_REVERT_GUIDE.md  PLAN_AGENT_RETRY_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  README_FINAL_SUMMARY.md  monitoring_system.md
docs/architecture/: ARCHITECTURE.md
docs/design/: DESIGN.md
docs/guides/: CONFIGURATION.md  USAGE_GUIDE.md
docs/implementation/: API_GATEWAY_INTEGRATION.md  IMPROVEMENT_SUMMARY.md  RESTRUCTURE_REPORT.md
examples/: example_ecommerce.yaml  example_news.yaml  example_real_estate.yaml  quick_start.py
reports/: PLAN_AGENT_ARXIV_E2E_TEST_REPORT.md  analyze-adaptive-strategy-gap_20260302.md  e2e_real_test_report.md  e2e_retry_comparison_report_20260302.md  e2e_run_codepen_stdout_stderr.txt  e2e_run_codepen_task_log.json  e2e_run_codepen_tighter_stdout_stderr.txt  e2e_test_results.json  e2e_validate_ppt_output_report_20260302.md  finalize-e2e-verdict_20260302_112036.md  rerun-codepen-e2e_run_20260302_112036.json  rerun-codepen-fullsite-e2e_20260302_115148.runlog.json  techcrunch_agent_analysis.md
scripts/: basic_verification.py  final_verification_report.py  initialize.py  quick_verification.py  real_test_runner.py  run_actual_tests.py  run_real_e2e_tests.py  setup.sh  setup_and_test_api_clean.py
specs/: e2e_codepen_html_ppt.json  e2e_codepen_html_ppt_tighter.json  example_ecommerce.json
specs/news/: example_news.json
specs/templates/: spec_template.yaml
specs/test_sites/: site_01_amazon.yaml  site_02_techcrunch.yaml  site_03_datawrapper.yaml  site_04_indeed.yaml  site_05_arxiv.yaml  site_06_zillow.yaml  site_07_allrecipes.yaml  site_08_yahoo_finance.yaml  site_09_medium.yaml  site_10_gov_tender.yaml
src/: __init__.py  container_manager.py  main.py  orchestrator.py  pipeline.py  run_mode.py
src/agents/: __init__.py  act.py  base.py  (+8 more)
test_assets/: README.txt
testcases/: test_basic_flow.py
tests/: __init__.py  e2e_test_simple.py  quick_e2e_test.py  test_agent_capabilities.py  test_basic.py  test_completion_gate.py  test_contracts_simple.py  test_integration.py  test_smart_router.py  test_tools.py
(+69 files in other folders)
